# django_resume

./: .dockerignore  .gitignore  AppVersionHash.txt  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env  .env.local  resume_nginx.conf
django_resume/: asgi.py  settings.py  urls.py  wsgi.py
proj_django_resume/: asgi.py  settings.py  urls.py  wsgi.py
resume/: admin.py  apps.py  models.py  urls.py  views.py
resume/templates/resume/: resume.html
resumes/: admin.py  apps.py  models.py  urls.py  views.py
resumes/templates/resumes/: 404.html  base.html  home.html  index.html  main.html  resume.html
resumes/templates/resumes/base/: detail.html  list.html
resumes/templates/resumes/partials/: nav.html
resumes/templatetags/: __init__.py  resume_filter.py
